--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,20 @@
-Babel==1.3
-Flask==0.9
-Flask-Babel==0.8
-Flask-Login==0.2.7
-Flask-Mail==0.7.6
-Flask-OpenID==1.1.1
-Flask-SQLAlchemy==0.16
-Flask-WTF==0.8.4
-Flask-WhooshAlchemy==0.54a
-Jinja2==2.7.1
-MarkupSafe==0.18
-SQLAlchemy==0.7.9
-Tempita==0.5.1
-WTForms==1.0.5
-Werkzeug==0.9.4
-Whoosh==2.5.4
-blinker==1.3
-decorator==3.4.0
-flup==1.0.2
-python-openid==2.2.5
-pytz==2013b
-speaklater==1.3
-sqlalchemy-migrate==0.7.2
-wsgiref==0.1.2
+CherryPy (3.2.4)
+Flask (0.10.1)
+itsdangerous (0.23)
+Jinja2 (2.7.2)
+MarkupSafe (0.18)
+mccabe (0.2.1)
+Mopidy (0.17.0)
+Mopidy-Scrobbler (1.0.0)
+Mopidy-Spotify (1.0.3)
+pip (1.5.4)
+pyflakes (0.7.3)
+Pykka (1.2.0)
+pylast (0.5.11)
+pyspotify (1.11)
+requests (2.2.1)
+setuptools (2.2)
+stevedore (0.14.1)
+Werkzeug (0.9.4)
+ws4py (0.3.2)
+wsgiref (0.1.2)
