Move config logic, add resume feature

--- a/src/app/settings.cfg
+++ b/src/app/settings.cfg
@@ -1,4 +1,7 @@
 [info]
-path = /mnt/time_capsule/filmer
-running time = 15.0982189178
+path = /home/pi/raspivideo/src/app
+config path = /home/pi/raspivideo/src/app/settings.cfg
+movie path = /mnt/time_capsule/filmer
+last played = 8
+running time = 18.9373860359
 
