--- a/src/app/requirements.txt
+++ b/src/app/requirements.txt
@@ -1,18 +1,7 @@
-CherryPy==3.2.4
-MarkupSafe==0.18
-Mopidy==0.17.0
-Mopidy-Scrobbler==1.0.0
-Mopidy-Spotify==1.0.3
-Pykka==1.2.0
-Werkzeug==0.9.4
-itsdangerous==0.23
-mccabe==0.2.1
-pyflakes==0.7.3
-pylast==0.5.11
-pyspotify==1.11
-stevedore==0.14.1
-virtualenv==1.11.4
-virtualenv-clone==0.2.4
-virtualenvwrapper==4.2
-ws4py==0.3.2
+Flask==0.10.1
+Jinja2==2.7.3
+MarkupSafe==0.23
+Werkzeug==0.9.6
+itsdangerous==0.24
+requests==2.4.3
 wsgiref==0.1.2
